--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,31 +15,20 @@ jobs:
     timeout-minutes: 60
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Show current time
-        run: |
-          echo "Current UTC time: $(date -u)"
-          echo "Current PH time: $(TZ='Asia/Manila' date)"
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install
+      - run: npx playwright install
 
-      - name: Run Playwright tests in parallel
-        run: npx playwright test --workers=max
+      - run: npx playwright test
 
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
