--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,29 +15,60 @@ jobs:
     timeout-minutes: 60
 
     steps:
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # Show current time
       - name: Show current time
         run: |
           echo "Current UTC time: $(date -u)"
           echo "Current PH time: $(TZ='Asia/Manila' date)"
 
+      # Setup Node.js
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
 
+      # Install dependencies
       - name: Install dependencies
         run: npm ci
 
+      # Install system dependencies for Playwright
+      - name: Install system dependencies for Playwright
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libnss3 \
+            libatk1.0-0 \
+            libatk-bridge2.0-0 \
+            libcups2 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            libgbm1 \
+            libpango-1.0-0 \
+            libasound2 \
+            libffi8 \
+            libx264 \
+            libglib2.0-0 \
+            wget \
+            ca-certificates
+
+      # Install Playwright browsers
       - name: Install Playwright browsers
         run: npx playwright install
 
+      # Run Playwright tests with 1-minute delay and HTML report
       - name: Run Playwright tests in parallel
-        run: npx playwright test --workers=max
+        run: |
+          echo "Waiting 1 minute before starting tests..."
+          sleep 60
+          npx playwright test --workers=max --reporter=html
 
+      # Upload HTML report as artifact
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
         if: always()
