--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,18 @@ jobs:
 
       - run: npx playwright install
 
-      - run: npx playwright test
+      # Install Allure CLI globally
+      - run: npm install -g allure-commandline --save-dev
 
+      # Run Playwright tests with Allure reporter
+      - run: npx playwright test --reporter=line,allure-playwright
+
+      # Generate Allure report
+      - run: allure generate allure-results --clean -o allure-report
+
+      # Upload Allure report as artifact
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
-          path: playwright-report/
+          name: allure-report
+          path: allure-report/
