--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests
+name: Playwright Tests with Allure
 
 on:
   push:
@@ -15,27 +15,34 @@ jobs:
     timeout-minutes: 60
 
     steps:
+      # Checkout code
       - uses: actions/checkout@v4
 
+      # Setup Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: 'npm'
 
+      # Install project dependencies
       - run: npm ci
 
+      # Install Playwright browsers
       - run: npx playwright install
 
-      # Install Allure CLI globally
-      - run: npm install -g allure-commandline --save-dev
+      # Install Allure Playwright reporter
+      - run: npm install --save-dev allure-playwright
 
       # Run Playwright tests with Allure reporter
       - run: npx playwright test --reporter=line,allure-playwright
 
-      # Generate Allure report
+      # Install Allure CLI to generate HTML report
+      - run: npm install -g allure-commandline
+
+      # Generate Allure report from test results
       - run: allure generate allure-results --clean -o allure-report
 
-      # Upload Allure report as artifact
+      # Upload Allure report as artifact for download
       - uses: actions/upload-artifact@v4
         if: always()
         with:
