--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,22 +22,45 @@ jobs:
           node-version: 18
           cache: 'npm'
 
-      # Install dependencies
+      # Install project dependencies
       - run: npm ci
 
-      # Install Playwright browsers and dependencies
+      # Install system dependencies for Playwright browsers
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libnss3 \
+            libatk-bridge2.0-0 \
+            libgtk-3-0 \
+            libx11-xcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            libgbm1 \
+            libasound2 \
+            libpangocairo-1.0-0 \
+            libatk1.0-0 \
+            libcups2 \
+            libdrm2 \
+            libxshmfence1 \
+            libxinerama1 \
+            libffi8 \
+            libx264 \
+            libharfbuzz0b
+
+      # Install Playwright browsers
       - run: npx playwright install --with-deps
 
-      # Install Allure reporter for Playwright
+      # Install Allure reporter
       - run: npm install --save-dev allure-playwright
 
-      # Run Playwright tests with Allure reporter
+      # Run tests
       - run: npx playwright test --reporter=line,allure-playwright
 
-      # Install Allure CLI to generate report
+      # Install Allure CLI
       - run: npm install -g allure-commandline
 
-      # Generate HTML Allure report
+      # Generate report
       - run: allure generate allure-results --clean -o allure-report
 
       # Upload report
