--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
@@ -22,45 +22,24 @@ jobs:
           node-version: 18
           cache: 'npm'
 
-      # Install project dependencies
+      # Install dependencies
       - run: npm ci
 
-      # Install system dependencies for Playwright browsers
-      - run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libnss3 \
-            libatk-bridge2.0-0 \
-            libgtk-3-0 \
-            libx11-xcb1 \
-            libxcomposite1 \
-            libxdamage1 \
-            libxrandr2 \
-            libgbm1 \
-            libasound2 \
-            libpangocairo-1.0-0 \
-            libatk1.0-0 \
-            libcups2 \
-            libdrm2 \
-            libxshmfence1 \
-            libxinerama1 \
-            libffi8 \
-            libx264 \
-            libharfbuzz0b
-
-      # Install Playwright browsers
-      - run: npx playwright install --with-deps
+      # Setup Playwright browsers automatically
+      - uses: microsoft/playwright-github-action@v1
+        with:
+          browsers: all
 
       # Install Allure reporter
       - run: npm install --save-dev allure-playwright
 
-      # Run tests
+      # Run tests with Allure reporter
       - run: npx playwright test --reporter=line,allure-playwright
 
       # Install Allure CLI
       - run: npm install -g allure-commandline
 
-      # Generate report
+      # Generate HTML Allure report
       - run: allure generate allure-results --clean -o allure-report
 
       # Upload report
