--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04   # ⭐ THIS FIXES EVERYTHING
     timeout-minutes: 60
 
     steps:
@@ -22,24 +22,21 @@ jobs:
           node-version: 18
           cache: 'npm'
 
-      # Install dependencies
       - run: npm ci
 
-      # Setup Playwright browsers automatically
-      - uses: microsoft/playwright-github-action@v1
-        with:
-          browsers: all
+      # Install Playwright browsers + system deps
+      - run: npx playwright install --with-deps
 
       # Install Allure reporter
       - run: npm install --save-dev allure-playwright
 
-      # Run tests with Allure reporter
+      # Run tests
       - run: npx playwright test --reporter=line,allure-playwright
 
       # Install Allure CLI
       - run: npm install -g allure-commandline
 
-      # Generate HTML Allure report
+      # Generate Allure report
       - run: allure generate allure-results --clean -o allure-report
 
       # Upload report
