--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Playwright Tests with Allure
+name: Playwright Tests
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
     branches: [ test ]
   workflow_dispatch:
   schedule:
-    - cron: '45 6 * * *'   # 2:45 PM PH time
+    - cron: '45 6 * * *'   # 2:45 PM PH time (6:45 UTC)
 
 jobs:
   test:
-    runs-on: ubuntu-22.04   # ⭐ THIS FIXES EVERYTHING
+    runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
@@ -24,24 +24,12 @@ jobs:
 
       - run: npm ci
 
-      # Install Playwright browsers + system deps
-      - run: npx playwright install --with-deps
+      - run: npx playwright install
 
-      # Install Allure reporter
-      - run: npm install --save-dev allure-playwright
+      - run: npx playwright test
 
-      # Run tests
-      - run: npx playwright test --reporter=line,allure-playwright
-
-      # Install Allure CLI
-      - run: npm install -g allure-commandline
-
-      # Generate Allure report
-      - run: allure generate allure-results --clean -o allure-report
-
-      # Upload report
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-report
-          path: allure-report/
+          name: playwright-report
+          path: playwright-report/
